fix black line around video on safari

--- a/src/components/Video/Video.module.scss
+++ b/src/components/Video/Video.module.scss
@@ -17,6 +17,7 @@
 
     video {
       position: relative;
+      background-color: white;
     }
 
     // Custom video player styling
